--- a/style.css
+++ b/style.css
@@ -424,212 +424,10 @@ body {
 .header-info__contacts {
     text-align: end;
 }
-/* BURGER MENU */
 
-.header-holder {
-    width: 100%;
-    z-index: 4;
-    overflow: hidden;
-  }
-  
-  .header .logo {
-    width: 114px;
-    height: 25px;
-    display: block;
-    background-image: url("https://yalantis.com/assets/v2/content/logo-561d8b053527f336d4b144c2d60a45de0f919f9fb10b1f49f8553b2bc5189ba7.svg");
-    background-size: 100% auto;
-    background-repeat: no-repeat;
-    order: 1;
-  }
-  
-  .search-mobile {
-    position: absolute;
-    top: -5px;
-    right: 50px;
-    z-index: 6;
-  } 
-  
-  .search-mobile a {
-    display: flex;
-    -webkit-box-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    align-items: center;
-    text-align: center;
-    width: 100px;
-    height: 60px;
-    position: relative;
-  }
-  
-  
-  .search-mobile a .icon_search {
-    width: 25px;
-    height: 25px;
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-transition: -webkit-transform .4s ease;
-    transition: -webkit-transform .4s ease;
-    transition: transform .4s ease;
-    transition: transform .4s ease, -webkit-transform .4s ease;
-  }
-  
-  
-  
-  .header-nav {
-    order: 2;
-  }
-  
-  .header-nav {
-    display: none; 
-  }
-  
-  .header-nav.active {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background-color: rgba(0,0,0,0.8);
-    z-index: 10;
-    opacity: 1;
-    -webkit-transition: opacity 0.6s linear;
-    transition: opacity 0.6s linear;
-  }
-  
-  .header-nav.active .header-nav__inner {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    flex-flow: row wrap;
-    -webkit-box-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    align-items: center;
-    align-content: center;
-    height: 100%;
-    overflow: auto;
-  }
-  
-  nav.active ul {
-    width: 100%;
-    text-align: center;
-    padding: 0;
-    overflow: hidden;
-    display: block;
-  }
-  
-  nav.active ul li {
-    padding: 10px 0;
-  }
-  
-  nav ul {
-    padding: 8px 0 0 0;
-    display: flex;
-  }
-  
-  nav ul li {
-    padding: 0 0 0 13px;
-    list-style: none;
-  }
-  
-  nav ul li a {
-    display: inline-block;
-    color: white;
-    text-transform: uppercase;
-    padding: 5px 8px;
-    letter-spacing: 0.9px;
-    position: relative;
-    text-decoration: none;
-    transition: color .5s ease-in-out;
-  }
-  
-  nav ul li a:hover {
-    color: orange;
-    transition: color .3s ease-in-out;
-  }
-  
-  .device-menu {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
-    z-index: 10;
-    background-color: rgba(0,0,0,0.9);
-    width: 40px;
-    height: 40px;
-    display: block;
-  }
-  
-  
-  .device-menu .device-menu__inner {
-    width: 24px;
-    height: 18px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  .device-menu span {
-    position: absolute;
-    width: 100%;
-    height: 3px;
-    left: 0;
-    background-color: white;
-    left: 0;
-  }
-  
-  .device-menu span:nth-child(1) {
-    top: 0;
-    transition: rotate, 0.3s;
-  }
-  
-  .device-menu span:nth-child(2) {
-    top: 50%;
-  }
-  
-  .device-menu span:nth-child(3) {
-    top: 100%;
-    -webkit-transition: rotate, 0.3s;
-    transition: rotate, 0.3s;
-  }
-  
-  .device-menu.open span:nth-child(1) {
-    top: 10px;
-    right: 0;
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-  }
-  
-  .device-menu.open span:nth-child(2) {
-    opacity: 0;
-  }
-  
-  .device-menu.open span:nth-child(3) {
-    top: 10px;
-    right: 0;
-    -webkit-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-  }
-  
-  @media only screen and (max-width: 1024px) {
-  .head {
-  display: none; 
-  }
-  
-  .head.active {
-  display: block;
-  }
-  
-  .device-menu {
-  display: block;
-  }
-  } 
+.header-nav {
+  display: none;
+}
 
 /* CONTENT */
 
@@ -753,12 +551,191 @@ body {
 
 /* ADAPTIVE */
 
-@media (max-width: 751px) {
-    .header-menu {
-        display: none;
-    }
-    .header-info {
-        display: none;
-    }
 
+@media (max-width: 721px) {
+  .wrapper {
+    padding: 0 40px;
+  }
+  .header-menu {
+      display: none;
+  }
+  .header-info {
+      display: none;
+  }
+  .header-holder {
+    width: 100%;
+    z-index: 4;
+    overflow: hidden;
+  }
+  
+  .search-mobile {
+    position: absolute;
+    top: -5px;
+    right: 50px;
+    z-index: 6;
+  } 
+  
+  .search-mobile a {
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    text-align: center;
+    width: 100px;
+    height: 60px;
+    position: relative;
+  }
+  
+  
+  .search-mobile a .icon_search {
+    width: 25px;
+    height: 25px;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: -webkit-transform .4s ease;
+    transition: -webkit-transform .4s ease;
+    transition: transform .4s ease;
+    transition: transform .4s ease, -webkit-transform .4s ease;
+  }
+  
+  .header-nav {
+    display: none; 
+    order: 2;
+  }
+  
+  .header-nav.active {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0,0,0,0.8);
+    z-index: 10;
+    opacity: 1;
+    transition: opacity 0.6s linear;
+  }
+  
+  .header-nav.active .header-nav__inner {
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    flex-flow: row wrap;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    align-content: center;
+    height: 100%;
+    overflow: auto;
+  }
+  
+  nav.active ul {
+    width: 100%;
+    text-align: center;
+    padding: 0;
+    overflow: hidden;
+    display: block;
+  }
+  
+  nav.active ul li {
+    padding: 10px 0;
+  }
+  
+  nav ul {
+    padding: 8px 0 0 0;
+    display: flex;
+  }
+  
+  nav ul li {
+    padding: 0 0 0 13px;
+    list-style: none;
+  }
+  
+  nav ul li a {
+    display: inline-block;
+    color: white;
+    text-transform: uppercase;
+    padding: 5px 8px;
+    letter-spacing: 0.9px;
+    position: relative;
+    text-decoration: none;
+    transition: color .5s ease-in-out;
+  }
+  
+  nav ul li a:hover {
+    color: orange;
+    transition: color .3s ease-in-out;
+  }
+  
+  .device-menu {
+    position: fixed;
+    right: 50px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    z-index: 10;
+    background-color: rgba(0,0,0,0.9);
+    width: 40px;
+    height: 40px;
+    display: block;
+  }
+  
+  .device-menu .device-menu__inner {
+    width: 24px;
+    height: 18px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .device-menu span {
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    left: 0;
+    background-color: white;
+    left: 0;
+  }
+  
+  .device-menu span:nth-child(1) {
+    top: 0;
+    transition: rotate, 0.3s;
+  }
+  
+  .device-menu span:nth-child(2) {
+    top: 50%;
+  }
+  
+  .device-menu span:nth-child(3) {
+    top: 100%;
+    -webkit-transition: rotate, 0.3s;
+    transition: rotate, 0.3s;
+  }
+  
+  .device-menu.open span:nth-child(1) {
+    top: 10px;
+    right: 0;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  
+  .device-menu.open span:nth-child(2) {
+    opacity: 0;
+  }
+  
+  .device-menu.open span:nth-child(3) {
+    top: 10px;
+    right: 0;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+}
+
+@media (max-width: 481px) {
+  .wrapper {
+    padding: 0 20px;
+  }
 }
